--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.14.0",
+    "react": "^15.3.1",
     "react-dropzone": "^3.6.0",
     "sqlite3": "^3.1.4"
   },
