--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "express": "^4.14.0",
     "react": "^15.3.1",
     "react-dropzone": "^3.6.0",
-    "sqlite3": "^3.1.4"
+    "sqlite3": "^3.1.4",
+    "sqlite3-transactions": "0.0.5"
   },
   "devDependencies": {},
   "scripts": {
