--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "express": "^4.14.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "react": "^15.3.1",
     "react-dropzone": "^3.6.0",
