--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.14.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
+    "multer": "^1.2.0",
     "react": "^15.3.1",
     "react-dropzone": "^3.6.0",
     "sqlite3": "^3.1.4",
