--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "chai-as-promised": "^5.3.0",
     "express": "^4.14.0",
     "fs-extra": "^0.30.0",
+    "jquery": "^3.1.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "multer": "^1.2.0",
     "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-dropzone": "^3.6.0",
     "sqlite3": "^3.1.4",
-    "sqlite3-transactions": "0.0.5"
+    "sqlite3-transactions": "0.0.5",
+    "superagent": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
+  },
   "scripts": {
     "test": "mocha",
     "start": "node server.js"
