--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.1",
     "fs-extra": "^0.30.0",
     "jquery": "^3.1.0",
     "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "multer": "^1.2.0",
-    "react": "^15.3.1",
+    "react": "^15.3.2",
     "react-dom": "^15.3.1",
     "react-dropzone": "^3.6.0",
     "sqlite3": "^3.1.4",
